Improve volunteer page and add gap stats and school calendar

--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -6,21 +6,17 @@
         .span8.panel#panel-right
             .content
                 %h2 Volunteer
-                %p.lead If you are inspired to help close the achievement gap for our students, join us as a volunteer.
+                %p If you are inspired to help close the achievement gap for our students, join us as a volunteer.
                 %p You have opportunities throughout the day Monday through Friday:
                 %ul
                     %li Tutoring our students in small groups for 1 1/2 hours one to four days per week.  Help our students learn letters, numbers, and colors during tutoring sessions Monday through Thursday:
                     %ul
                         %li Mondays and Tuesdays 8:30 AM - 10:00 AM
                         %li Wednesdays and Thursdays 9:40 AM - 11:10 AM
-                    %br
                     %li Helping to serve lunch from 11:10 AM - 1:10 PM one to five days per week.
-                    %br
                     %li Riding the bus home with our students for 30-45 minutes at 4:00 PM one to five days per week.
-                    %br
                     %li Providing Administrative Assistance support on a flexible schedule throughout the week.
-                %br
-                %p.lead If you have time and talent to share, please contact Rick Campion, Executive Director.
+                %p If you have time and talent to share, please contact Rick Campion, Executive Director.
                 %p
                     %b Rick Campion, Executive Director
                 %p.text-info
