--- a/app/views/results/achievement_gap.haml
+++ b/app/views/results/achievement_gap.haml
@@ -30,3 +30,6 @@
                 %p.mini-lead
                     %b The Leadership Gap:
                 %blockquote Our leaders have traveled across the country and they are bringing best practices in high performing schools across the country to Prodeo Academy. They have experience from school leadership, curriculum development, teacher coaching, fundraising, and most importantly, academic results.
+                %h3 Achievement Gap
+                .center
+                    %img{:src => asset_path('results/gap.png')}
