--- a/app/views/results/results.haml
+++ b/app/views/results/results.haml
@@ -5,7 +5,8 @@
                 %h2 Meaningful and Measurable Results
                 .row-fluid
                     .span7
-                        %p We are excited about the tremendous growth our students have experienced since starting with us at the end of August. Less than 20% of our students came to us kindergarten ready, and after just over two months at Prodeo Academy, 85% of our scholars are on grade level and 62% of those are advanced.
+                        %p We are excited about the tremendous growth our students continue to experience since starting with us at the end of August. Fewer than 20% of our students were on grade level in September, and after just over two months at Prodeo Academy, 88% of our scholars were on grade level with 62% of those advanced. As of February, we are happy to report that 37% of our students have already passed an end of Kindergarten assessment and are now working on First Grade level material.
                         %img{:src => asset_path('results/results.png')}
+                        %p The STEP Assessment was developed at the University of Chicago Urban Education Institute. It is used in high-performing schools across the country as a means to analyze student data and plan for instruction.
                     .span5
                         %img{:src => asset_path('results/winner.jpg')}
