Update achivement gap info

--- a/app/views/results/achievement_gap.haml
+++ b/app/views/results/achievement_gap.haml
@@ -2,9 +2,13 @@
     .row
         .span12.panel#panel-main
             .content
-                %h2 Achievement Gap
-                %p.lead The African American Leadership Forum identifies five gaps that lead to underachievement.
-                %p.lead At Prodeo Academy, we are creating a strong culture and focused learning environment that addresses each of these gaps, so that our students are prepared for success.
+                %h2 Achievement Gap in Minnesota
+                .center
+                    %img{:src => asset_path('results/gap.png'), :width => "800px"}
+                %small.pull-right *according to state test results
+                .clearfix
+                %p The African American Leadership Forum identifies five gaps that lead to underachievement.
+                %p At Prodeo Academy, we are creating a strong culture and focused learning environment that addresses each of these gaps, so that our students are prepared for success.
                 %br
 
                 %p.mini-lead
@@ -30,6 +34,3 @@
                 %p.mini-lead
                     %b The Leadership Gap:
                 %blockquote Our leaders have traveled across the country and they are bringing best practices in high performing schools across the country to Prodeo Academy. They have experience from school leadership, curriculum development, teacher coaching, fundraising, and most importantly, academic results.
-                %h3 Achievement Gap
-                .center
-                    %img{:src => asset_path('results/gap.png')}
