--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -43,7 +43,7 @@
                     .span12
                         %ul.thumbnails
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Kelly Mulvehill", :role => "External Relations Director"}
+                                = render :partial => "staff", :locals => {:name => "Kelly Mulvehill", :role => "External Relations Director, Literacy and Mindfulness Teacher"}
                 %h3 Office and Academic Support
                 .row-fluid
                     .span12
