Fix youtube video not pausing

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -74,4 +74,4 @@
         %button.close#stop-video{:type => "button", :data => {:dismiss => "modal"}} x
         %h3 Video
     .modal-body
-        %iframe#video{:width => "530px", :height => "325px", :src => "//www.youtube.com/embed/zxs4xAyPIXs", :frameborder => "0", :allowfullscreen => true}
+        %iframe#video{:width => "530px", :height => "325px", :ssrc => "//www.youtube.com/embed/zxs4xAyPIXs", :frameborder => "0", :allowfullscreen => true}
