Temp board meeting time

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -26,6 +26,7 @@
                 %h3 Board Meetings
                 .row-fluid
                     .span12
+                        %p.lead The next board meeting has been moved to Wednesday, April 2nd from 5:30pm - 7:00pm.
                         %p
                             Our Board meets every fourth Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
