Update donate info

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -89,8 +89,10 @@
                         %img{:src => asset_path('givemn.png')}
             .span6
                 %p.lead Donate by mail
-                %p To make a contribution by mail, send a check to the address below, attention: Rick Campion.
+                %p To make a contribution by mail, send a check to the address below.
                 %p
+                    Attention: Rick Campion
+                    %br
                     Prodeo Academy
                     %br
                     1555 40th Ave NE
