--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -14,4 +14,4 @@
                         %br
                         = render :partial => "partners", :locals => {:title => "Tutoring Partners", :partners => ProdeoacademyOrg::Application.config.tutors}
                     .span7
-                        = render :partial => "partners", :locals => {:title => "Support from Coporations and Foundations", :partners => ProdeoacademyOrg::Application.config.corporations}
+                        = render :partial => "partners", :locals => {:title => "Support from Corporations and Foundations", :partners => ProdeoacademyOrg::Application.config.corporations}
