--- a/app/views/student_life/typical_day.haml
+++ b/app/views/student_life/typical_day.haml
@@ -7,7 +7,7 @@
                     %thead
                         %th{:width => "110px"} Time
                         %th{:width => "110px"} Length
-                        %th Activit
+                        %th Activity
                     %tbody
                         %tr
                             %td 7:10 – 7:40
