--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -4,7 +4,7 @@
             .container
                 .carousel-caption
                     %a{:href => "#youtube", :data => {:toggle => "modal"}}
-                        %img.youtube.pull-left{:src => asset_path('youtube.png'), :rel => "tooltip", :title => "Watch our video"}
+                        %img.youtube.pull-left{:src => asset_path('youtube.png'), :rel => "tooltip", :title => "Watch our video", :data => {:position => "top"}}
                     %h1 College Starts Here
                     %a.btn.btn-large.btn-inverse{:href => "/about/who_we_are"} Enroll your child today &raquo;
             - (1..16).to_a.shuffle.each_with_index do |i, j|
