Update staff page

--- a/app/views/about/_staff.haml
+++ b/app/views/about/_staff.haml
@@ -2,8 +2,9 @@
     %img{:src => asset_path("board/#{urlify(name)}.png")}
     .caption
         %h4= name
-        %small= role
-        %br
+        - unless role.nil?
+            %small= role
+            %br
         %small
             - email = email(name)
             %a{:href => "mailto:#{email}"}= truncate email, :length => 26
