--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -25,28 +25,27 @@
                     .span12
                         %ul.thumbnails
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Rachel Hemsey", :role => "Kindergarten Teacher, Leadership Team Member"}
+                                = render :partial => "staff", :locals => {:name => "Jennifer Christensen", :role => nil}
+                            %li.span3
+                                = render :partial => "staff", :locals => {:name => "Skye Hoekstra", :role => "Kindergarten Teacher"}
                             %li.span3
                                 = render :partial => "staff", :locals => {:name => "Mandy Lindstrom", :role => "Kindergarten Teacher"}
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Ashley Willeck", :role => "Kindergarten Teacher"}
-                %h3 Core and Electives
+                                = render :partial => "staff", :locals => {:name => "Melissa Lindquist", :role => "First Grade Teacher"}
+                        %ul.thumbnails
+                            %li.span3
+                                = render :partial => "staff", :locals => {:name => "Charnay Paris", :role => "First Grade Teacher"}
+                            %li.span3
+                                = render :partial => "staff", :locals => {:name => "Ashley Willeck", :role => "First Grade Teacher"}
+                %h3 Staff
                 .row-fluid
                     .span12
                         %ul.thumbnails
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Jordan Sallis", :role => "Fitness Coordinator"}
+                                = render :partial => "staff", :locals => {:name => "Erica Jaastad", :role => "Academic Dean"}
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Camille Sypura", :role => "Core Teacher"}
-                %h3 External Relations and Literacy Support
-                .row-fluid
-                    .span12
-                        %ul.thumbnails
+                                = render :partial => "staff", :locals => {:name => "Camille Sypura", :role => "Science/Social Studies Teacher"}
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Kelly Mulvehill", :role => "External Relations Director, Literacy and Mindfulness Teacher"}
-                %h3 Office and Academic Support
-                .row-fluid
-                    .span12
-                        %ul.thumbnails
+                                = render :partial => "staff", :locals => {:name => "Paris Kyles", :role => "Fitness Coordinator"}
                             %li.span3
-                                = render :partial => "staff", :locals => {:name => "Ady Perez", :role => "Office and Teaching Assistant"}
+                                = render :partial => "staff", :locals => {:name => "Angela Shepherd", :role => "Family Engagement Social Worker"}
