Add meeting information

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -22,10 +22,20 @@
                             = render :partial => "board", :locals => {:name => "Kerry Givens", :role => "Executive Director, South Minneapolis YMCA"}
                             = render :partial => "board", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
                             = render :partial => "board", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
+                %h3 Meeting
+                .row-fluid
+                    .span12
+                        %p.lead The meeting is at Prodeo Academy at 4:30pm on Monday.
+                        %p The agenda will include:
+                        %ul
+                            %li MN Teaching Licensure
+                            %li Family Leave Policy
+                        %p Dial-in Number: (712) 432-1212
+                        %p Meeting ID: 968-036-480
                 %h3 Board Meetings
                 .row-fluid
                     .span12
-                        %p.lead The next board meeting has been moved to Wednesday, April 2nd from 5:30pm - 7:00pm.
+                        -# %p.lead The next board meeting has been moved to Wednesday, June 25th from 5:30pm - 7:00pm.
                         %p
                             Our Board meets every fourth Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
