--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -8,13 +8,12 @@
                     .span12
                         %ul.thumbnails.board
                             = render :partial => "board", :locals => {:name => "Doug Jaeger", :role => "Interim Board Chair, Former CEO of Adolfson & Peterson"}
-                            = render :partial => "board", :locals => {:name => "Rachel Hemsey", :role => "Teacher at Prodeo Academy"}
                             = render :partial => "board", :locals => {:name => "Lidibette Rosado-Guzm&aacute;n", :role => "Diversity Coordinator, World Language Teacher"}
-                            = render :partial => "board", :locals => {:name => "Mark Chronister", :role => "Partner at Templeton Laird"}
+                            = render :partial => "board", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird"}
+                            = render :partial => "board", :locals => {:name => "Jill Davies", :role => "Board Secretary, Consultant, Target"}
                         %ul.thumbnails.board
-                            = render :partial => "board", :locals => {:name => "Jill Johnson", :role => "Board Secretary, Senior Business Analyst, Target"}
-                            = render :partial => "board", :locals => {:name => "Chancey Anderson", :role => "Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon"}
                             = render :partial => "board", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio"}
+                            = render :partial => "board", :locals => {:name => "Jeff Kleinfelter", :role => nil}
                 %h2 Community Engagment Committe
                 .row-fluid
                     .span12
@@ -22,22 +21,13 @@
                             = render :partial => "board", :locals => {:name => "Kerry Givens", :role => "Executive Director, South Minneapolis YMCA"}
                             = render :partial => "board", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
                             = render :partial => "board", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
-                %h3 Meeting
-                .row-fluid
-                    .span12
-                        %p.lead The meeting is at Prodeo Academy at 4:30pm on Monday.
-                        %p The agenda will include:
-                        %ul
-                            %li MN Teaching Licensure
-                            %li Family Leave Policy
-                        %p Dial-in Number: (712) 432-1212
-                        %p Meeting ID: 968-036-480
                 %h3 Board Meetings
                 .row-fluid
                     .span12
-                        -# %p.lead The next board meeting has been moved to Wednesday, June 25th from 5:30pm - 7:00pm.
                         %p
-                            Our Board meets every fourth Wednesday of the month at 5:30pm at
+                            Our board meets every other month on the fourth Wednesday at
+                            %i 5:30pm
+                            at
                             %i 1555 40th Ave NE, Mpls, MN 55421
                         %p
                             The upcoming agenda and all past board minutes can be viewed on
