--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -87,7 +87,7 @@
                 %h2 Our History
                 %p
                     %b Prodeo Academy was founded in 2011.
-                    Its founders, Rick Campion and Chancey Anderson recognized that in order for Prodeo Academy to be exceptionally successful, they needed to learn from the highest-performing schools in the country. Therefore, Rick Campion spent the past two years studying and completing internships in several such schools in order to bring best practices back to North Minneapolis. Chancey spent time teaching and writing curriculum for Uncommon Schools, one of the highest-performing networks in the country.
+                    Founders Rick Campion and Chancey Anderson recognized that in order for Prodeo Academy to be exceptionally successful, they needed to learn from the highest-performing schools in the country. Therefore, Rick Campion spent the past two years studying and completing internships in several such schools in order to bring best practices back to North Minneapolis. Chancey spent time teaching and writing curriculum for Uncommon Schools, one of the highest-performing networks in the country.
                 %p
                     As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
                     %i all families have the same platform for future success. 
