Note about board meeting

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -24,6 +24,8 @@
                 %h3 Board Meetings
                 .row-fluid
                     .span12
+                        %p.lead The November 2014 Board Meeting has been changed to Wednesday, December 3 at 5:30pm at Prodeo Academy due to the Thanksgiving holiday.
+                        %br
                         %p
                             Our board meets every other month on the fourth Wednesday at
                             %i 5:30pm
