--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -44,7 +44,7 @@
                                 %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                     Contact Us
                                     %span.caret
-                                = submenu(["Apply to Teach", "Apply to Tutor", "Volunteer", "Visit Prodeo Academy"], "Contact")
+                                = submenu(["Apply to Teach", "Apply to Tutor", "Volunteer", "Get in Touch"], "Contact")
             = yield
             #push
         %footer
