Update donate link

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -84,7 +84,7 @@
                 %p.lead Donate online
                 %br
                 .center
-                    %a{:href => "https://givemn.org/project/Education-Prodeo-Academy", :target => "_blank"}
+                    %a{:href => "http://www.razoo.com/story/Education-Prodeo-Academy", :target => "_blank"}
                         %span Click to donate online
                         %img{:src => asset_path('givemn.png')}
             .span6
