Update video on homepage

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -73,7 +73,7 @@
         %button.close#stop-video{:type => "button", :data => {:dismiss => "modal"}} x
         %h3 Video
     .modal-body
-        %iframe#video{:width => "530px", :height => "325px", :ssrc => "//www.youtube.com/embed/zxs4xAyPIXs", :frameborder => "0", :allowfullscreen => true}
+        %iframe#video{:width => "530px", :height => "300px", :ssrc => "//player.vimeo.com/video/96627422", :frameborder => "0", :allowfullscreen => true}
 #donate.modal.hide.fade
     .modal-header
         %button.close#stop-video{:type => "button", :data => {:dismiss => "modal"}} x
